--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.3.2",
+    "mongoose": "^7.3.3",
     "nodemon": "^3.0.1",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
