--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.1",
+    "react-native-select-dropdown": "^3.3.4",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
